<resources>
    <string name="app_name">Gestion des parkings</string>
    <string name="distance">Distance</string>

    <string name="rafraichir">RAFRAÎCHIR</string>
    <string name="guidage">GUIDAGE</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rechercher">Rechercher</string>
    <string name="param_tres">Paramètres</string>
    <string name="proches">Proches</string>
    <string name="accueil">Accueil</string>
    <string name="intervalle_de_rafra_chissement">Intervalle de rafraîchissement</string>
    <string name="autre_chose">Autre chose</string>
    <string name="label_param_miniature">Afficher la miniature du parking</string>

    <string name="aucun_favoris">Vous n\'avez aucun favoris, ajoutez-en en cliquant
        sur le symbole étoile d\'un parking</string>
    <string name="aucun_parking">Il n\'y a aucun parking à afficher, réessayez plus tard</string>
    <string name="refresh_btn">Rafraichir</string>
    <string name="distance_param">Distance pour les parkings proches</string>
    <string name="proximite_choix">Choix de la proximité</string>
    <string name="label_valider">Valider</string>
    <string name="label_km">km</string>
</resources>
