<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/itemlist_layout"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:padding="15dp"
        tools:context="parkidia.parking.a4lpmms.gestionparking_android.ScreenSlidePagerActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#262626"
            android:textSize="17sp"
            android:text="@string/intervalle_de_rafra_chissement" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#E0E0E0"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#262626"
            android:textSize="17sp"
            android:text="@string/autre_chose" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#E0E0E0"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp" />
    </LinearLayout>

    <!-- Bandeau d'icones en bas de page -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#288AE2"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:id="@+id/accueil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:alpha="0.5"
                android:src="@drawable/home_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accueil" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/proches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:alpha="0.5"
                android:src="@drawable/near_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proches" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:alpha="0.5"
                android:src="@drawable/search_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rechercher" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/params"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/setting_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/param_tres" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>